--- a/pkg/humble/humble_nogpu/Dockerfile.jinja
+++ b/pkg/humble/humble_nogpu/Dockerfile.jinja
@@ -20,22 +20,25 @@ FROM ros:humble-ros-base
 ARG OVERLAY_WS
 WORKDIR $OVERLAY_WS
 
-# source entrypoint setup
+# Copy compiled package
+COPY --from=ros_build ./install ./install
+
+# Source setup on entrypoint
 ENV OVERLAY_WS $OVERLAY_WS
 RUN sed --in-place --expression \
   '$isource "$OVERLAY_WS/install/setup.bash"' \
   /ros_entrypoint.sh
 
 {% for sysdep in system_dependencies %}
-RUN apt-get update && apt-get install {{ sysdep }}
+RUN apt-get update && apt-get install -y {{ sysdep }}
 {% endfor %}
 
 # TODO: Install the runtime dependencies
 
 {% if launch_file %}
-CMD [ "ros2", "launch", "{{ package_name }}", "{{ launch_file }}", {{ extra_args }} ]
+CMD [ "ros2", "launch", "{{ package_name }}", "{{ launch_file }}"{% if extra_args %}, {{ extra_args }} {% endif %}]
 {% elif command %}
-CMD [ "ros2", "run", "{{ package_name }}", "{{ command_file }}", {{ extra_args }} ]
+CMD [ "ros2", "run", "{{ package_name }}", "{{ command_file }}"{% if extra_args %}, {{ extra_args }} {% endif %}]
 {% else %}
 CMD [ "echo", "No execution option provided, container will not run!!" ]
 {% endif %}
